# Bloom-Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml
app/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 0c0951e5905b_update_product_item_and_order_table.py  5c3a58ff3bf3_init_tables.py  7218f47deeb1_init_tables.py  7db4b9f07219_init_tables.py  8cf1c2dd718e_init_tables.py  b0ac1f81274b_add_addresses_to_account_type_info.py  cb8d906380bd_add_attachment_to_account_type_info.py  f58575a4b958_add_tokens_table.py
app/config/: logging.local.yaml  logging.yaml
app/scripts/: dev.sh  migrate.sh  pre-start.sh  start.sh
app/src/: main.py
app/src/core/: celery.py  config.py  constants.py  dependencies.py  enums.py  jinja.py  mjml.py  openapi.py  security.py
app/src/core/database/: decorators.py  session.py  transaction.py  utils.py
app/src/core/exceptions/: __init__.py  handler.py
app/src/core/helpers/: __init__.py  assets.py  misc.py  request.py  response.py
app/src/core/initializers/: database.py  fixtures.py  i18n.py
app/src/core/logging/: __init__.py  config.py  exceptions.py  filters.py  formatters.py
app/src/core/middlewares/: __init__.py  csrf.py  openapi_security.py  request_throttler.py  request_utils.py
app/src/core/settings/: base.py  local.py  production.py  staging.py
app/src/core/templates/: utils.py
app/src/core/types/: __init__.py  guid.py  (+5 more)
app/tests/services/: test_security_service.py  test_token_service.py
(+210 files in other folders)
